<?xml version="1.0"?>
<package>
  <name>hsrb_meshes</name>
  <version>1.0.0</version>
  <description>meshes for the Robot HSRB</description>

  <maintainer email="koji_terada@mail.toyota.co.jp">Koji Terada</maintainer>

  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International Public License</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
